@@ -1,6 +1,3 @@
-import groovy.json.JsonSlurper
-import groovy.json.JsonParserType
-
 buildscript {
 	repositories {
 		mavenCentral()
@@ -14,38 +11,37 @@ plugins {
 	id "com.bmuschko.docker-remote-api" version "4.0.5"
 }
 
+repositories {
+	jcenter()
+	mavenCentral()
+}
+
+apply plugin: "java"
+apply plugin: "maven"
+apply plugin: "scala"
+apply plugin: "signing"
+
 description = "Mongoose is a high-load storage performance testing tool"
+group = "com.github.emc-mongoose"
+sourceCompatibility = 11
+targetCompatibility = 11
+version = "4.2.1"
 
 ext {
 	depVersion = [
-		confuse            : "1.2.1",
-		confuseIoJson      : "1.1.0",
-		commonsCodec       : "1.11",
-		commonsLang        : "2.6",
-		disruptor          : "3.4.2",
-		fiber4j            : "1.1.0",
-		jackson            : "2.9.8",
-		javaCommons        : "2.2.3",
-		javassist          : "3.23.1-GA",
-		jetty              : "9.4.14.v20181114",
-		junit              : "4.12",
-		scala              : "2.12.6",
-		slf4j              : "1.7.25",
-		log4j              : "2.8.2",
-		tsdbMetrics        : "0.6.0",
-		nagaina            : "3.6.11",
-		netty              : "4.1.25.Final",
-		nettyConnectionPool: "1.1.0",
-		nettyTcNative      : "2.0.12.Final",
+		base                : "4.2.1",
+		loadStepPipeline    : "4.2.1",
+		loadStepWeighted    : "4.2.1",
+		storageDriverCoop   : "4.2.1",
+		storageDriverPreempt: "4.2.1",
+		storageDriverNetty  : "4.2.1",
+		storageDriverNio    : "4.2.1",
+		storageDriverHttp   : "4.2.1",
+		storageDriverFs     : "4.2.1",
+		storageDriverAtmos  : "4.2.1",
+		storageDriverS3     : "4.2.1",
+		storageDriverSwift  : "4.2.0",
 	]
-	baseProject = project(":base")
-	extProjects = subprojects.findAll {
-		!it.path.equals(":base") &&
-			!it.path.equals(":load") &&
-			!it.path.equals(":load:step") &&
-			!it.path.equals(":storage") &&
-			!it.path.equals(":storage:driver")
-	}
 	jarFileName = rootProject.name
 	javaHome = System.properties["java.home"]
 	jreOutputDir = "${rootProject.buildDir}${File.separator}jre"
@@ -53,254 +49,43 @@ ext {
 	modulesDepsFilePath = "${rootProject.buildDir}${File.separator}modules.deps"
 }
 
-allprojects {
-
-	buildscript {
-		repositories {
-			mavenCentral()
-		}
-	}
-
-	repositories {
-		jcenter()
-		mavenCentral()
-	}
-
-	apply plugin: "java"
-	apply plugin: "maven"
-	apply plugin: "scala"
-	apply plugin: "signing"
-
-	group = "com.github.emc-mongoose"
-
-	sourceCompatibility = 11
-	targetCompatibility = 11
-
-	configurations {
-		provided
-		testCompile {
-			extendsFrom(compileOnly, provided)
-		}
-	}
-
-	sourceSets {
-		main {
-			compileClasspath += configurations.provided
-		}
-	}
-
-	test {
-		useJUnit()
-		exclude "com/emc/mongoose/endurance/*"
-		exclude "com/emc/mongoose/integration/*"
-		exclude "com/emc/mongoose/params/*"
-		exclude "com/emc/mongoose/perf/*"
-		exclude "com/emc/mongoose/system/*"
-		exclude "com/emc/mongoose/util/*"
-		exclude "**/TemplateTest.*"
-		exclude "**/*PerfTest.*"
-		jvmArgs "-XX:MaxDirectMemorySize=2g"
-		jvmArgs "-XX:+HeapDumpOnOutOfMemoryError"
-		maxHeapSize "2g"
-		testLogging {
-			events = [
-				"standardOut", "skipped", "started", "failed",
-			]
-			showExceptions = true
-			showStandardStreams = true
-		}
-	}
-
-	task perfTest(type: Test) {
-		useJUnit()
-		include "com/emc/mongoose/perf/*"
-		jvmArgs "-XX:MaxDirectMemorySize=2g"
-		jvmArgs "-XX:+HeapDumpOnOutOfMemoryError"
-		maxHeapSize "2g"
-		testLogging {
-			events = [
-				"standardOut", "skipped", "started", "failed",
-			]
-			showExceptions = true
-			showStandardStreams = true
-		}
-	}
-
-	task integrationTest(type: Test) {
-		useJUnit()
-		include "com/emc/mongoose/integration/*"
-		exclude "**/RollingAppenderTest*"
-		jvmArgs "-XX:MaxDirectMemorySize=2g"
-		jvmArgs "-XX:+HeapDumpOnOutOfMemoryError"
-		maxHeapSize "2g"
-		testLogging {
-			events = [
-				"standardOut", "skipped", "started", "failed",
-			]
-			showExceptions = true
-			showStandardStreams = true
-		}
-	}
-
-	task systemTest(type: Test) {
-		useJUnit()
-		include "com/emc/mongoose/system/*"
-		maxHeapSize "1g"
-		testLogging {
-			events = [
-				"standardOut", "skipped", "started", "failed",
-			]
-			showExceptions = true
-			showStandardStreams = true
-		}
-	}
-
-	task enduranceTest(type: Test) {
-		useJUnit()
-		include "com/emc/mongoose/endurance/*"
-		maxHeapSize "1g"
-		testLogging {
-			events = [
-				"standardOut", "skipped", "started", "failed",
-			]
-			showExceptions = true
-			showStandardStreams = true
-		}
-	}
-
-	// travis deploy stage runs "./gradlew check" again which is unnecessary
-	check.dependsOn -= test
-
-	javadoc {
-		classpath += configurations.provided
-	}
-
-	signing {
-		required {
-			gradle.taskGraph.hasTask("uploadArchives")
-		}
-		sign configurations.archives
-	}
-
-	// see http://central.sonatype.org/pages/gradle.html for details
-	uploadArchives {
-
-		// upload base artifact and extensions
-		if(project != rootProject && !(project in extProjects)) {
-			return
-		}
-
-		LinkedList nameParts = new LinkedList()
-		collectName(project, nameParts)
-
-		def ossrhUsername = project.hasProperty("ossrhUsername") ?
-			project.property("ossrhUsername") : null
-		def ossrhPassword = project.hasProperty("ossrhPassword") ?
-			project.property("ossrhPassword") : null
-
-		repositories {
-			mavenDeployer {
-				beforeDeployment {
-					MavenDeployment deployment -> signing.signPom(deployment)
-				}
-
-				repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-					authentication(userName: ossrhUsername, password: ossrhPassword)
-				}
-
-				snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-					authentication(userName: ossrhUsername, password: ossrhPassword)
-				}
-
-				pom {
-
-					groupId = rootProject.group
-					name = nameParts.join("-")
-					artifactId = name
-
-					project {
-						description = rootProject.description
-
-						url "https://github.com/emc-mongoose/mongoose/wiki"
-
-						scm {
-							connection "https://github.com/emc-mongoose/mongoose.git"
-							developerConnection "https://github.com/emc-mongoose/mongoose.git"
-							url "https://github.com/emc-mongoose/mongoose.git"
-						}
-
-						licenses {
-							license {
-								name "The MIT License (MIT)"
-								url "https://github.com/emc-mongoose/mongoose/wiki/License"
-							}
-						}
-
-						developers {
-							developer {
-								id "akurilov"
-								name "Andrey Kurilov"
-								email "akurilov123@gmail.com"
-							}
-						}
-					}
-				}
-			}
-		}
+configurations {
+	extension {
+		extendsFrom(compileOnly)
 	}
 }
 
-void collectName(final Project p, final LinkedList<String> names) {
-	names.addFirst p.name
-	if(p.parent != null) {
-		collectName(p.parent, names)
-	}
+dependencies {
+	compile(
+		"${group}:mongoose-base:${depVersion.base}",
+	)
+	extension(
+		"${group}:mongoose-load-step-pipeline:${depVersion.loadStepPipeline}",
+		"${group}:mongoose-load-step-weighted:${depVersion.loadStepWeighted}",
+		"${group}:mongoose-storage-driver-coop:${depVersion.storageDriverCoop}",
+		"${group}:mongoose-storage-driver-preempt:${depVersion.storageDriverPreempt}",
+		"${group}:mongoose-storage-driver-netty:${depVersion.storageDriverNetty}",
+		"${group}:mongoose-storage-driver-nio:${depVersion.storageDriverNio}",
+		"${group}:mongoose-storage-driver-http:${depVersion.storageDriverHttp}",
+		"${group}:mongoose-storage-driver-fs:${depVersion.storageDriverFs}",
+		"${group}:mongoose-storage-driver-atmos:${depVersion.storageDriverAtmos}",
+		"${group}:mongoose-storage-driver-s3:${depVersion.storageDriverS3}",
+		"${group}:mongoose-storage-driver-swift:${depVersion.storageDriverSwift}",
+	)
 }
 
-subprojects {
+// travis deploy stage runs "./gradlew check" again which is unnecessary
+check.dependsOn -= test
 
-	jar {
+javadoc {
+	classpath += configurations.compile
+}
 
-		duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
-		manifest {
-			attributes(
-				"Implementation-Version": rootProject.version,
-			)
-		}
-
-		excludes = [
-			"**/*.css",
-			"**/*.html",
-			"META-INF/*.DSA",
-			"META-INF/*.LIST",
-			"META-INF/*.RSA",
-			"META-INF/*.SF",
-			"module-info.class",
-		]
+signing {
+	required {
+		gradle.taskGraph.hasTask("uploadArchives")
 	}
-
-	task sourcesJar(type: Jar, dependsOn: classes) {
-		LinkedList names = new LinkedList()
-		collectName(project, names)
-		baseName = names.join("-")
-		classifier = "sources"
-		from sourceSets.main.allSource
-	}
-
-	task javadocJar(type: Jar, dependsOn: javadoc) {
-		LinkedList names = new LinkedList()
-		collectName(project, names)
-		baseName = names.join("-")
-		classifier = "javadoc"
-		from javadoc.destinationDir
-	}
-
-	artifacts {
-		archives jar
-		archives sourcesJar
-		archives javadocJar
-	}
+	sign configurations.archives
 }
 
 wrapper {
@@ -308,32 +93,33 @@ wrapper {
 }
 
 jar {
-
 	baseName = rootProject.name
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-
+	excludes = [
+		"**/*.css",
+		"**/*.html",
+		"META-INF/*.DSA",
+		"META-INF/*.LIST",
+		"META-INF/*.RSA",
+		"META-INF/*.SF",
+		"module-info.class",
+	]
 	manifest {
 		attributes(
 			"Automatic-Module-Name": rootPkg,
 			"Implementation-Title": rootProject.name,
+			"Implementation-Version": version,
 			"Main-Class": "${rootPkg}.base.Main",
 		)
 	}
-
-	from baseProject.jar.outputs.files.collect {
+	from configurations.compile.copyRecursive().collect {
 		zipTree(it)
 	}
-
-	extProjects
-		.each {
-			final Project p = it
-			from(p.jar.outputs.files) {
-				into "${File.separator}ext"
-				rename {
-					fileName -> "${p.description}.jar"
-				}
-			}
+	into("${File.separator}ext") {
+		from configurations.extension.copyRecursive().collect {
+			it
 		}
+	}
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -352,67 +138,66 @@ artifacts {
 	archives javadocJar
 }
 
-assemble.dependsOn += jar
+// see http://central.sonatype.org/pages/gradle.html for details
+uploadArchives {
 
-// Custom JRE //////////////////////////////////////////////////////////////////////////////////////////////////////////
+	def ossrhUsername = project.hasProperty("ossrhUsername") ?
+		project.property("ossrhUsername") : null
+	def ossrhPassword = project.hasProperty("ossrhPassword") ?
+		project.property("ossrhPassword") : null
 
-def execute(cmd, dir = null) {
-	def stdOut = new StringBuilder(), stdErr = new StringBuilder()
-	def proc = dir == null ? cmd.execute() : cmd.execute([], dir)
-	proc.consumeProcessOutput(stdOut, stdErr)
-	proc.waitForOrKill(100_000)
-	println "${cmd}\n\t$stdErr"
-	stdOut.toString()
-}
+	repositories {
+		mavenDeployer {
+			beforeDeployment {
+				MavenDeployment deployment -> signing.signPom(deployment)
+			}
 
-task listAllModulesDeps(dependsOn: jar) {
-	doLast {
-		def modulesDepsFile = new File(modulesDepsFilePath)
-		modulesDepsFile.delete()
-		def projects = []
-		projects.add(baseProject)
-		projects.addAll(extProjects)
-		projects.each {
-			def cmd = [
-				"${javaHome}${File.separator}bin${File.separator}jdeps",
-				"--module-path ${javaHome}${File.separator}jmods",
-				"--list-deps ${it.jar.outputs.files.iterator().next()}",
-			].join(' ')
-			def deps = execute(cmd)
-				.takeWhile { it != '/' } + '\n'
-			modulesDepsFile.append(deps)
+			repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+				authentication(userName: ossrhUsername, password: ossrhPassword)
+			}
+
+			snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+				authentication(userName: ossrhUsername, password: ossrhPassword)
+			}
+
+			pom {
+
+				groupId = rootProject.group
+				name = rootProject.name
+				artifactId = name
+
+				project {
+					description = rootProject.description
+
+					url "https://github.com/emc-mongoose/mongoose/wiki"
+
+					scm {
+						connection "https://github.com/emc-mongoose/mongoose.git"
+						developerConnection "https://github.com/emc-mongoose/mongoose.git"
+						url "https://github.com/emc-mongoose/mongoose.git"
+					}
+
+					licenses {
+						license {
+							name "The MIT License (MIT)"
+							url "https://github.com/emc-mongoose/mongoose/wiki/License"
+						}
+					}
+
+					developers {
+						developer {
+							id "akurilov"
+							name "Andrey Kurilov"
+							email "akurilov123@gmail.com"
+						}
+					}
+				}
+			}
 		}
 	}
 }
 
-task dedupModulesDeps(dependsOn: listAllModulesDeps) {
-	doLast {
-		def deps = execute("sort -b -u ${modulesDepsFilePath}")
-			.lines()
-			.findAll { !it.isBlank() }
-			.join('\n')
-		def modulesDepsFile = new File(modulesDepsFilePath)
-		modulesDepsFile.delete()
-		modulesDepsFile.append(deps)
-	}
-}
-
-task jre(dependsOn: dedupModulesDeps) {
-	doLast {
-		def modulesToAdd = new File(modulesDepsFilePath)
-			.readLines()
-			*.trim()
-			.join(',')
-		execute(
-			[
-				"${javaHome}${File.separator}bin${File.separator}jlink",
-				"--no-header-files --no-man-pages --strip-debug --compress=2 --bind-services",
-				"--module-path ${javaHome}${File.separator}jmods --add-modules ${modulesToAdd}",
-				"--output ${jreOutputDir}",
-			].join(' ')
-		)
-	}
-}
+assemble.dependsOn += jar
 
 // Docker tasks ////////////////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -456,15 +241,15 @@ task dockerCreateContainerRobotest(type: DockerCreateContainer, dependsOn: [dock
 	autoRemove = true
 	binds = [
 		"${rootProject.buildDir}": "/root/mongoose/build",
-		"/var/run/docker.sock": "/var/run/docker.sock",
+		"/var/run/docker.sock"   : "/var/run/docker.sock",
 	]
 	envVars = [
-		"HOST_WORKING_DIR": rootProject.projectDir.absolutePath,
-		"MONGOOSE_VERSION": version,
+		"HOST_WORKING_DIR"      : rootProject.projectDir.absolutePath,
+		"MONGOOSE_VERSION"      : version,
 		"MONGOOSE_IMAGE_VERSION": version,
-		"SERVICE_HOST": "localhost",
-		"SUITE": System.getenv("SUITE"),
-		"TEST": System.getenv("TEST"),
+		"SERVICE_HOST"          : "localhost",
+		"SUITE"                 : System.getenv("SUITE"),
+		"TEST"                  : System.getenv("TEST"),
 	]
 	imageId = dockerBuildImageRobotest.getImageId()
 	network = "host"
@@ -482,7 +267,7 @@ task robotest(type: DockerWaitContainer, dependsOn: dockerStartContainerRobotest
 	targetContainerId dockerCreateContainerRobotest.getContainerId()
 	timeout = 600 // 10 min w/o output -> fail on Travis CI
 	doLast {
-		if(0 != exitCode) {
+		if (0 != exitCode) {
 			throw new GradleException("Some robotests FAILED")
 		} else {
 			println "Robotests PASSED"
